         bug #2743838) (Fred).
20090803 Makefile.am,compat.h,compat/amiga/{Makefile.am,osname.c},
         compat/unix/{Makefile.am,osname.c},configure.in,snap2tzx.c,utils.c:
         add OS compatibility stubs ala Fuse (patch #2315512) (Chris Young &
         Fred).
20090803 compat/amiga/basename.c,compat/unix/basename.c: missed a couple of
         files (Fred).
20091022 importer/soundfile.cc: we expect mono sound files, tell audiofile to
         make the required adjustments (fixes bug #2883135; thanks, Gilberto
         Almeida) (Fred).
20091212 importer/romloader.cc: guard against array underrun on empty block
         (Fred).
20100722 converter/romloader.cc: fix header printing (Fred).
20100722 tzxlist.c: add ROM block header printing (Fred).
20100806 Makefile.am,acinclude.m4,config.rpath,configure.in,man/tzxlist.1,
         tzxlist.c: support the de-facto standard Windows-1252 charset in TZX
         text (Fred).
20101003 snapconv.c,man/snapconv.1: add -f flag to write snapshots with A and F
         and A' and F' transposed to fix SZX snaps written with old versions of
         libspectrum (Fred).
20101003 man/snapconv.1: libspectrum now automatically fixes the problem of
         A and F being transposed.
20101007 raw2hdf.c: add missing default for version (fixes bug #3082566; thanks,
         UB880D) (Fred).
20101129 ChangeLog,README,man/*.1: updates for 1.0.
20101206 Makefile.am: remember to put all compat directories in the dist tarball
         (thanks, kizmiaz).
20101216 README,configure.in,man/*.1: updates for 1.0.0 release.
20101216 ChangeLog: update date here as well.
20101229 tzxlist.c: fix typo in archive block printing (patch #3147102) (Alberto
         Garcia).
20110122 compat/win32/{Makefile.am,osname.c},configure.in: add compatibility
         function support for Windows (patch #3163680) (Sergio Baldovi).
20110122 audio2tape.h,configure.in: add support for --without-gcrypt flag like
         libspectrum (patch #3163845) (Ooblick).